--- a/popup/popup.css
+++ b/popup/popup.css
@@ -1,10 +1,8 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    align-items: center;
-    justify-content: center;
-    height: auto;
-    background: #2777b057;
+  /* Estilos Generales */
+  body {
+    font-family: 'Roboto', sans-serif; /* Cambiar según la fuente que elijas */
+    background-color: #121212; /* Fondo en modo oscuro */
+    color: #ffffff; /* Texto en modo oscuro */
     min-width: 450px;
   }
 #fechas{
@@ -15,11 +13,22 @@ body {
   .match-score-container {
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    background-color: #ffffff; /* Color de fondo del contenedor */
+    border: 1px solid #dee2e6; /* Borde del contenedor */
+    padding: 12px; /* Espaciado interno */
+    margin-bottom: 16px; /* Margen inferior entre partidos */
+    background-color: #1e1e1e; /* Fondo del contenedor en modo oscuro */
+    border: 1px solid #444;
+    max-width: 600px; /* Ajusta según sea necesario sacar? */
   }
   
   .team {
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    margin: 8px 0; /* Ajusta según sea necesario */
   }
   
   .team-logo {
@@ -30,7 +39,8 @@ body {
   
   .team-name {
     font-weight: bold;
-    margin-right: 4px;
+    margin-right: 8px;
+    margin-left: 16px
   }
   
   .team-score {
@@ -43,10 +53,6 @@ body {
     font-size: 24px;
     font-weight: bold;
   }
-
-
-
-
 
   .basketball {
     position: relative;
@@ -131,3 +137,21 @@ body {
     75% {transform: scaleX(0.7);}
     100% {transform: scaleX(1);}
   }
+
+
+
+
+/* Botones de Fechas en Modo Oscuro */
+.botonFecha {
+  background-color: #0d6efd; /* Color del fondo del botón en modo oscuro */
+  color: #ffffff; /* Color del texto del botón en modo oscuro */
+  border: 1px solid #0d6efd; /* Borde del botón en modo oscuro */
+}
+
+/* Hover y Focus para Botones en Modo Oscuro */
+.botonFecha:hover,
+.botonFecha:focus {
+  background-color: #0a58ca; /* Color del fondo al hacer hover o focus en modo oscuro */
+  color: #ffffff; /* Color del texto al hacer hover o focus en modo oscuro */
+  border-color: #0a58ca; /* Borde al hacer hover o focus en modo oscuro */
+}
