--- a/popup/popup.css
+++ b/popup/popup.css
@@ -1,157 +1,160 @@
   /* Estilos Generales*/
-  body {
-    font-family: 'Roboto', sans-serif; /* Cambiar según la fuente que elijas */
-    background-color: #121212; /* Fondo en modo oscuro */
-    color: #ffffff; /* Texto en modo oscuro */
-    min-width: 450px;
-  }
+body {
+  font-family: 'Roboto', sans-serif; /* Cambiar según la fuente que elijas */
+  background-color: #121212; /* Fondo en modo oscuro */
+  color: #ffffff; /* Texto en modo oscuro */
+  min-width: 450px;
+}
+.hora{
+  font-family: 'Lato', sans-serif;
+  color: #f5f5f5;
+  font-size: 12px;
+}
 #fechas{
   display: flex;
   justify-content: space-between;
 }
   
-  .match-score-container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #ffffff; /* Color de fondo del contenedor */
-    border: 1px solid #dee2e6; /* Borde del contenedor */
-    padding: 12px; /* Espaciado interno */
-    margin-bottom: 16px; /* Margen inferior entre partidos */
-    background-color: #1e1e1e; /* Fondo del contenedor en modo oscuro */
-    border: 1px solid #444;
-    max-width: 600px; /* Ajusta según sea necesario sacar? */
-  }
+.match-score-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #ffffff; /* Color de fondo del contenedor */
+  border: 1px solid #dee2e6; /* Borde del contenedor */
+  padding: 12px; /* Espaciado interno */
+  margin-bottom: 16px; /* Margen inferior entre partidos */
+  background-color: #1e1e1e; /* Fondo del contenedor en modo oscuro */
+  border: 1px solid #444;
+  max-width: 600px; /* Ajusta según sea necesario sacar? */
+}
   
-  .team {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    margin: 8px 0; /* Ajusta según sea necesario */
-  }
+.team {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  margin: 8px 0; /* Ajusta según sea necesario */
+}
   
-  .team-logo {
-    width: 40px;
-    height: 40px;
-    margin-right: 8px;
-  }
-  
-  .team-name {
-    font-weight: bold;
-    margin-right: 8px;
-    margin-left: 16px
-  }
-  
-  .team-score {
-    font-size: 24px;
-    font-weight: bold;
-  }
-  
-  .separator {
-    margin: 0 16px;
-    font-size: 24px;
-    font-weight: bold;
-  }
+.team-logo {
+  width: 40px;
+  height: 40px;
+  margin-right: 8px;
+}
 
-  .basketball {
-    position: relative;
-    top: 70px;
-    left: 35%;
-  }
-  
-  .ball {
-    position: absolute;
-    background-color: #e76f51;
-    border-radius:50%;
-    width:100px;
-    height:100px;
-    overflow: hidden;
-    border: 3px solid #333;
-    animation: bounce 1.5s ease-in infinite;
-  }
-  
-  @keyframes bounce {
-     0% {transform: translate3d(0, 0, 0) rotate(0deg);}
-    25% {transform: translate3d(0, -185px, 0) rotate(90deg);}
-    50% {transform: translate3d(0, 0, 0) rotate(180deg);}
-    75% {transform: translate3d(0, -185px, 0) rotate(270deg);}
-    100% {transform: translate3d(0, 0, 0) rotate(360deg);}
-  }
-  
-  .ball:before, .ball:after {
-    content:"";
-    position: absolute;
-    background-color: #333;
-    width:110px;
-    height:3px;
-    top:50px;
-    left:-5px;
-  }
-  
-  .ball:before {
-    transform: rotate(45deg);
-  }
-  
-  .ball:after {
-    transform: rotate(-45deg);
-  }
-  
-  .lines {
-    position: absolute;
-    border-radius:50%;
-    border: 3px solid #333;
-    width:70px;
-    height:70px;
-    left:-20px;
-    top:-20px;
-  }
-  
-  .lines:before {
-    content:"";
-    position: absolute; 
-    border-radius:50%;
-    border: 3px solid #333;
-    width:70px;
-    height:70px;
-    top:65px;
-    left:60px;
-  }
-  
-  .shadow {
-    position: absolute;
-    width:100px;
-    height:15px;
-    background-color: rgba(0,0,0,0.2);
-    border-radius:50%;
-    top:95px;
-    z-index:-1;
-    left:3px;
-    animation: scale 1.5s ease-in infinite;
-  }
-  
-  @keyframes scale {
-    0% {transform: scaleX(1);}
-    25% {transform: scaleX(0.7);}
-    50% {transform: scaleX(1);}
-    75% {transform: scaleX(0.7);}
-    100% {transform: scaleX(1);}
-  }
+.team-name {
+  font-weight: bold;
+  margin-right: 8px;
+  margin-left: 16px
+}
 
+.team-score {
+  font-size: 24px;
+  font-weight: bold;
+}
+  
+.separator {
+  margin: 0 20px;
+  font-size: 24px;
+  font-weight: bold;
+}
 
+.basketball {
+  position: relative;
+  top: 70px;
+  left: 35%;
+}
 
+.ball {
+  position: absolute;
+  background-color: #e76f51;
+  border-radius:50%;
+  width:100px;
+  height:100px;
+  overflow: hidden;
+  border: 3px solid #333;
+  animation: bounce 1.5s ease-in infinite;
+}
+
+@keyframes bounce {
+    0% {transform: translate3d(0, 0, 0) rotate(0deg);}
+  25% {transform: translate3d(0, -185px, 0) rotate(90deg);}
+  50% {transform: translate3d(0, 0, 0) rotate(180deg);}
+  75% {transform: translate3d(0, -185px, 0) rotate(270deg);}
+  100% {transform: translate3d(0, 0, 0) rotate(360deg);}
+}
+
+.ball:before, .ball:after {
+  content:"";
+  position: absolute;
+  background-color: #333;
+  width:110px;
+  height:3px;
+  top:50px;
+  left:-5px;
+}
+
+.ball:before {
+  transform: rotate(45deg);
+}
+
+.ball:after {
+  transform: rotate(-45deg);
+}
+  
+.lines {
+  position: absolute;
+  border-radius:50%;
+  border: 3px solid #333;
+  width:70px;
+  height:70px;
+  left:-20px;
+  top:-20px;
+}
+
+.lines:before {
+  content:"";
+  position: absolute; 
+  border-radius:50%;
+  border: 3px solid #333;
+  width:70px;
+  height:70px;
+  top:65px;
+  left:60px;
+}
+
+.shadow {
+  position: absolute;
+  width:100px;
+  height:15px;
+  background-color: rgba(0,0,0,0.2);
+  border-radius:50%;
+  top:95px;
+  z-index:-1;
+  left:3px;
+  animation: scale 1.5s ease-in infinite;
+}
+  
+@keyframes scale {
+  0% {transform: scaleX(1);}
+  25% {transform: scaleX(0.7);}
+  50% {transform: scaleX(1);}
+  75% {transform: scaleX(0.7);}
+  100% {transform: scaleX(1);}
+}
 
 /* Botones de Fechas en Modo Oscuro */
 .botonFecha {
-  background-color: #0d6efd; /* Color del fondo del botón en modo oscuro */
+  background-color: #333333; /* Gris oscuro para el fondo del botón en modo oscuro */
   color: #ffffff; /* Color del texto del botón en modo oscuro */
-  border: 1px solid #0d6efd; /* Borde del botón en modo oscuro */
+  border: 1px solid #333333; /* Borde del botón en modo oscuro */
 }
 
 /* Hover y Focus para Botones en Modo Oscuro */
 .botonFecha:hover,
 .botonFecha:focus {
-  background-color: #0a58ca; /* Color del fondo al hacer hover o focus en modo oscuro */
+  background-color: #555555; /* Gris más claro al hacer hover o focus en modo oscuro */
   color: #ffffff; /* Color del texto al hacer hover o focus en modo oscuro */
-  border-color: #0a58ca; /* Borde al hacer hover o focus en modo oscuro */
+  border-color: #555555; /* Borde al hacer hover o focus en modo oscuro */
 }
+
