--- a/popup/popup.css
+++ b/popup/popup.css
@@ -181,8 +181,9 @@ body {
 table {
   width: 100%;
   border-collapse: collapse;
-  margin-bottom: 20px;
-  background-color: #444;
+  margin-bottom: 0px;
+  background-color: #000;
+  ;
 }
 
 th, td {
@@ -196,11 +197,21 @@ th {
 }
 
 tr:hover {
-  background-color: #555;
+  background-color: darkslategrey;
 }
 
 .team-logo {
   width: 30px; /* Adjust as needed */
   height: auto;
   margin-right: 10px;
+}
+
+
+/*  CSS DE WINENR Y LOSER TEAMS ACOMDOAR DSP */
+.winnerTeam{
+  color: #1d971d
+}
+
+.loserTeam{
+  color: #ab2424
 }
