se sube cambio de color en victoria y derrota

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -210,9 +210,9 @@ tr:hover {
 
 /*  CSS DE WINENR Y LOSER TEAMS ACOMDOAR DSP */
 .winnerTeam{
-  color: #1d971d
+  color: #28a745
 }
 
 .loserTeam{
-  color: #ab2424
+  color: #dc3545
 }
